--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-gauge-chart": "^0.2.5",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "react-toastify": "^5.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
